api sample amdinMiddleware login register done

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <button routerLinkActive="active" routerLink="/add-recipe">+</button>
-<button routerLinkActive="active" routerLink="/recipe-list">eye</button>
-<button routerLinkActive="active" routerLink="/create-account">register</button>
+<button routerLinkActive="active" routerLink="/recipes">recettes</button>
+<button routerLinkActive="active" routerLink="/register">register</button>
 <button routerLinkActive="active" routerLink="/login">Login</button>
 <router-outlet></router-outlet>
