--- a/front/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/front/src/app/recipes/recipe-list/recipe-list.component.html
@@ -28,5 +28,5 @@
         </div>
     </section>
     <button (click)="goToRecipe(recipe._id)">voir</button>
-    <button>Supprimer</button>
+    <button (click)="delete(recipe._id, recipe.i )">Supprimer</button>
 </div>
