--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,6 +1,3 @@
 <app-header></app-header>
-<button routerLinkActive="active" routerLink="/add-recipe">+</button>
-<button routerLinkActive="active" routerLink="/recipes">recettes</button>
-<button routerLinkActive="active" routerLink="/register">register</button>
-<button routerLinkActive="active" routerLink="/login">Login</button>
+<app-navigation></app-navigation>
 <router-outlet></router-outlet>
