logout & delete recipe

--- a/front/src/app/admin/crud/recipe/update-recipe/update-recipe.component.html
+++ b/front/src/app/admin/crud/recipe/update-recipe/update-recipe.component.html
@@ -68,6 +68,7 @@
                 <button type="button" (click)="addStep()">+</button>
             </div>
         <button type="submit">OK!</button>
+        <button (click)="delete()">Supprimer</button>
     </section>
     </div>
 </form>
