--- a/front/src/app/shared/navigation/navigation.component.html
+++ b/front/src/app/shared/navigation/navigation.component.html
@@ -6,3 +6,4 @@
 <button routerLinkActive="active" routerLink="/update-user">User</button>
 <button routerLinkActive="active" routerLink="/myaccount">Mon profil</button>
 <button routerLinkActive="active" routerLink="/dashboard">Dashboard</button>
+<p (click)="logout()"*ngIf="isLogged">logout </p>
