--- a/front/src/app/admin/dashboard/dashboard.component.html
+++ b/front/src/app/admin/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
 <h2>Dashboard</h2>
+
 <h3>Recettes </h3>
     <div *ngFor="let recipe of Recipes; let i =index">
         <h2>{{recipe.name}}</h2>
@@ -6,6 +7,9 @@
         <button (click)="goToUpdateRecipe(recipe._id)">voir</button>
     </div>
 <h3>Utilisateurs</h3>
+    <div *ngFor="let user of Users; let i =index">
+        <h2>{{user.email}}</h2>
+    </div>
 <p>et ici il y'a le nom de mes utilisateurs </p>
 
 
