--- a/front/src/app/shared/navigation/navigation.component.html
+++ b/front/src/app/shared/navigation/navigation.component.html
@@ -1,9 +1,5 @@
-<button routerLinkActive="active" routerLink="/create-recipe">+ recette</button>
-<button routerLinkActive="active" routerLink="/recipes">recettes</button>
-<button routerLinkActive="active" routerLink="/register">register</button>
-<button routerLinkActive="active" routerLink="/login">Login</button>
-<button routerLinkActive="active" routerLink="/update-recipe">modify recettes</button>
-<button routerLinkActive="active" routerLink="/update-user">User</button>
-<button routerLinkActive="active" routerLink="/myaccount">Mon profil</button>
-<button routerLinkActive="active" routerLink="/dashboard">Dashboard</button>
+<button routerLinkActive="active" routerLink="/recipes" *ngIf="isLogged" >recettes</button>
+<button routerLinkActive="active" routerLink="/register" *ngIf="!isLogged">register</button>
+<button routerLinkActive="active" routerLink="/login" *ngIf="!isLogged">Login</button>
+<button routerLinkActive="active" routerLink="/myaccount" *ngIf="isLogged">Mon profil</button>
 <p (click)="logout()"*ngIf="isLogged">logout </p>
