--- a/front/src/app/admin/crud/user/update-user/update-user.component.html
+++ b/front/src/app/admin/crud/user/update-user/update-user.component.html
@@ -1,1 +1,8 @@
+<section class="nav-dashboard">
+    <mat-icon aria-hidden="true" aria-label="voir d'autres recettes" fontIcon="ramen_dining"
+        routerLink="/recipes"></mat-icon>
+    <button routerLinkActive="active" routerLink="/create-recipe" class="button-nav-recipe-create">créer
+        recette</button>
+    <button routerLinkActive="active" routerLink="/dashboard" class="button-nav-dashboard">Dashboard</button>
+</section>
 <p>update-user works!</p>
