--- a/front/src/app/public/recipe/recipe-detail/recipe-detail.component.html
+++ b/front/src/app/public/recipe/recipe-detail/recipe-detail.component.html
@@ -1,29 +1,36 @@
-<app-recipe-nav></app-recipe-nav>
-<h4>{{Recipe?.country}} - {{Recipe?.name}}</h4>
+<section class="nav-recipe">
+    <mat-icon aria-hidden="true" aria-label="voir d'autres recettes" fontIcon="ramen_dining"
+        routerLink="/recipes"></mat-icon>
+    <button class="button-nav-recipe-detail" (click)="goToOverview()">Aperçu</button>
+    <button class="button-nav-recipe-ingredients" (click)="goToIngredient()">Ingredients</button>
+    <button class="button-nav-recipe-steps" (click)="goToStep()">Étapes</button>
+</section>
 
-<div *ngFor="let time of Recipe.time; let i =index">
-    <h4>Temps de Prépation</h4>
-    <p>{{time.cooking_time}} {{time.cooking_time_unit}}</p>
-    <h4>Temps de Cuisson</h4>
-    <p>{{time.baking_time}} {{time.baking_time_unit}}</p>
-</div>
-    <div *ngFor="let diet of Recipe.diets; let i = index">
-        <h3>{{diet.value}}</h3>
-    </div>
-    <section class="ingredients section">
+<section class="recipe-content">
+
+    <article #overviewSection class="aperçu-recipe-section">
+        <h3>{{Recipe?.country}} - {{Recipe?.name}}</h3>
+        <div *ngFor="let diet of Recipe.diets; let i = index">
+            <h4>{{diet.value}}</h4>
+        </div>
+        <div *ngFor="let time of Recipe.time; let i =index">
+            <h5>Temps de Prépation : {{time.cooking_time}} {{time.cooking_time_unit}}</h5>
+            <h5>Temps de Cuisson: {{time.baking_time}} {{time.baking_time_unit}}</h5>
+        </div>
+    </article>
+
+    <article #ingredientSection class="ingredient-recipe-section">
         <h4>Ingredient</h4>
-    <div *ngFor="let ingredient of Recipe.ingredients; let i = index">
-        <p></p>
-        <p>{{ingredient.category}}</p>
-        <p>{{ingredient.quantity}} {{ingredient.unit}} {{ingredient.name}} </p>
-    </div>
+        <div *ngFor="let ingredient of Recipe.ingredients; let i = index">
+            <h5>{{ingredient.category}}</h5>
+            <p>{{ingredient.quantity}} {{ingredient.unit}} {{ingredient.name}} </p>
+        </div>
+    </article>
+
+    <article #stepSection class="steps-recipe-section">
+        <h4>Étapes</h4>
+        <div *ngFor="let step of Recipe.steps; let i= index">
+            <p>{{step.name}}</p>
+        </div>
+    </article>
 </section>
-<section class="steps section">
-<h4>Étapes</h4>
-<div *ngFor="let step of Recipe.steps; let i= index">
-    <p>{{step.name}}</p>
-</div>
-</section>
-
-
-
