--- a/front/src/app/shared/header/header.component.html
+++ b/front/src/app/shared/header/header.component.html
@@ -1,1 +1,3 @@
-<h2 (click)="goToHomePage()">Yumami</h2>
+<header>
+    <img src="../../../assets/img/Yumami.png" alt="logo yumami"(click)="goToHomePage()"/>
+</header>
